Fixed bug in data processing script

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -298,3 +298,4 @@ Temporary commit content 3366
 Temporary commit content 3385
 Temporary commit content 3389
 Temporary commit content 3395
+Temporary commit content 3400
