Refactored code for better readability

--- a/edt/config.json
+++ b/edt/config.json
@@ -197,3 +197,4 @@ Temporary commit content 2168
 Temporary commit content 2174
 Temporary commit content 2180
 Temporary commit content 2187
+Temporary commit content 2191
