--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -83,3 +83,4 @@ Temporary commit content 949
 Temporary commit content 961
 Temporary commit content 979
 Temporary commit content 1009
+Temporary commit content 1051
