--- a/edt/config.json
+++ b/edt/config.json
@@ -53,3 +53,4 @@ Temporary commit content 594
 Temporary commit content 598
 Temporary commit content 601
 Temporary commit content 603
+Temporary commit content 606
