Updated project documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -275,3 +275,4 @@ Temporary commit content 3180
 Temporary commit content 3185
 Temporary commit content 3215
 Temporary commit content 3218
+Temporary commit content 3243
