Optimized database queries

--- a/edt/config.json
+++ b/edt/config.json
@@ -341,3 +341,4 @@ Temporary commit content 3897
 Temporary commit content 3911
 Temporary commit content 3914
 Temporary commit content 3949
+Temporary commit content 3955
