Fixed typos in documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -147,3 +147,4 @@ Temporary commit content 1791
 Temporary commit content 1804
 Temporary commit content 1807
 Temporary commit content 1822
+Temporary commit content 1827
