--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -49,3 +49,4 @@ Temporary commit content 650
 Temporary commit content 651
 Temporary commit content 654
 Temporary commit content 657
+Temporary commit content 669
