--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -69,3 +69,4 @@ Temporary commit content 847
 Temporary commit content 856
 Temporary commit content 871
 Temporary commit content 880
+Temporary commit content 884
