Added validation for user input

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -51,3 +51,4 @@ Temporary commit content 654
 Temporary commit content 657
 Temporary commit content 669
 Temporary commit content 691
+Temporary commit content 700
