Updated project documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -352,3 +352,4 @@ Temporary commit content 4007
 Temporary commit content 4026
 Temporary commit content 4031
 Temporary commit content 4035
+Temporary commit content 4061
