Added initial project plan

--- a/edt/config.json
+++ b/edt/config.json
@@ -120,3 +120,4 @@ Temporary commit content 1334
 Temporary commit content 1358
 Temporary commit content 1419
 Temporary commit content 1441
+Temporary commit content 1443
