Enhanced UI responsiveness

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -398,3 +398,4 @@ Temporary commit content 4537
 Temporary commit content 4556
 Temporary commit content 4559
 Temporary commit content 4565
+Temporary commit content 4572
