--- a/edt/config.json
+++ b/edt/config.json
@@ -414,3 +414,4 @@ Temporary commit content 4727
 Temporary commit content 4730
 Temporary commit content 4742
 Temporary commit content 4751
+Temporary commit content 4752
