Updated README with new features

--- a/edt/config.json
+++ b/edt/config.json
@@ -43,3 +43,4 @@ Temporary commit content 498
 Temporary commit content 512
 Temporary commit content 531
 Temporary commit content 532
+Temporary commit content 542
