--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -96,3 +96,4 @@ Temporary commit content 1155
 Temporary commit content 1164
 Temporary commit content 1165
 Temporary commit content 1172
+Temporary commit content 1187
