Improved error handling logic

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -335,3 +335,4 @@ Temporary commit content 3811
 Temporary commit content 3820
 Temporary commit content 3822
 Temporary commit content 3844
+Temporary commit content 3863
