Fixed typos in documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -57,3 +57,4 @@ Temporary commit content 710
 Temporary commit content 715
 Temporary commit content 724
 Temporary commit content 743
+Temporary commit content 753
