Updated project documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -345,3 +345,4 @@ Temporary commit content 3895
 Temporary commit content 3908
 Temporary commit content 3910
 Temporary commit content 3915
+Temporary commit content 3925
