Optimized database queries

--- a/edt/config.json
+++ b/edt/config.json
@@ -362,3 +362,4 @@ Temporary commit content 4127
 Temporary commit content 4133
 Temporary commit content 4137
 Temporary commit content 4138
+Temporary commit content 4146
