Updated project documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -214,3 +214,4 @@ Temporary commit content 2397
 Temporary commit content 2409
 Temporary commit content 2417
 Temporary commit content 2431
+Temporary commit content 2438
