Enhanced UI responsiveness

--- a/edt/config.json
+++ b/edt/config.json
@@ -298,3 +298,4 @@ Temporary commit content 3450
 Temporary commit content 3459
 Temporary commit content 3460
 Temporary commit content 3464
+Temporary commit content 3482
