Enhanced UI responsiveness

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -157,3 +157,4 @@ Temporary commit content 1945
 Temporary commit content 1947
 Temporary commit content 1987
 Temporary commit content 1988
+Temporary commit content 1997
