Enhanced UI responsiveness

--- a/edt/config.json
+++ b/edt/config.json
@@ -280,3 +280,4 @@ Temporary commit content 3232
 Temporary commit content 3233
 Temporary commit content 3253
 Temporary commit content 3291
+Temporary commit content 3305
