Fixed typos in documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -286,3 +286,4 @@ Temporary commit content 3279
 Temporary commit content 3281
 Temporary commit content 3283
 Temporary commit content 3290
+Temporary commit content 3299
