Updated README with new features

--- a/edt/config.json
+++ b/edt/config.json
@@ -275,3 +275,4 @@ Temporary commit content 3072
 Temporary commit content 3087
 Temporary commit content 3108
 Temporary commit content 3194
+Temporary commit content 3196
