Fixed bug in data processing script

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -137,3 +137,4 @@ Temporary commit content 1691
 Temporary commit content 1700
 Temporary commit content 1701
 Temporary commit content 1706
+Temporary commit content 1708
