Optimized database queries

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -199,3 +199,4 @@ Temporary commit content 2410
 Temporary commit content 2419
 Temporary commit content 2422
 Temporary commit content 2436
+Temporary commit content 2437
