Updated project documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -169,3 +169,4 @@ Temporary commit content 2086
 Temporary commit content 2091
 Temporary commit content 2097
 Temporary commit content 2104
+Temporary commit content 2120
