Fixed typos in documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -175,3 +175,4 @@ Temporary commit content 2152
 Temporary commit content 2158
 Temporary commit content 2179
 Temporary commit content 2213
+Temporary commit content 2214
