Enhanced UI responsiveness

--- a/edt/config.json
+++ b/edt/config.json
@@ -290,3 +290,4 @@ Temporary commit content 3356
 Temporary commit content 3357
 Temporary commit content 3406
 Temporary commit content 3417
+Temporary commit content 3427
