--- a/edt/config.json
+++ b/edt/config.json
@@ -90,3 +90,4 @@ Temporary commit content 1053
 Temporary commit content 1054
 Temporary commit content 1065
 Temporary commit content 1073
+Temporary commit content 1074
