Improved error handling logic

--- a/edt/config.json
+++ b/edt/config.json
@@ -336,3 +336,4 @@ Temporary commit content 3816
 Temporary commit content 3832
 Temporary commit content 3852
 Temporary commit content 3858
+Temporary commit content 3874
