--- a/edt/config.json
+++ b/edt/config.json
@@ -396,3 +396,4 @@ Temporary commit content 4545
 Temporary commit content 4578
 Temporary commit content 4579
 Temporary commit content 4580
+Temporary commit content 4596
