Refactored code for better readability

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -249,3 +249,4 @@ Temporary commit content 2968
 Temporary commit content 2979
 Temporary commit content 2981
 Temporary commit content 2989
+Temporary commit content 2998
