Added initial project plan

--- a/edt/config.json
+++ b/edt/config.json
@@ -56,3 +56,4 @@ Temporary commit content 603
 Temporary commit content 606
 Temporary commit content 663
 Temporary commit content 664
+Temporary commit content 699
