Enhanced UI responsiveness

--- a/edt/config.json
+++ b/edt/config.json
@@ -138,3 +138,4 @@ Temporary commit content 1561
 Temporary commit content 1565
 Temporary commit content 1580
 Temporary commit content 1600
+Temporary commit content 1604
