Updated project documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -322,3 +322,4 @@ Temporary commit content 3683
 Temporary commit content 3688
 Temporary commit content 3719
 Temporary commit content 3729
+Temporary commit content 3731
