Added validation for user input

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -88,3 +88,4 @@ Temporary commit content 1063
 Temporary commit content 1071
 Temporary commit content 1093
 Temporary commit content 1096
+Temporary commit content 1124
