Improved error handling logic

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -428,3 +428,4 @@ Temporary commit content 4901
 Temporary commit content 4906
 Temporary commit content 4935
 Temporary commit content 4937
+Temporary commit content 4941
