Enhanced UI responsiveness

--- a/edt/config.json
+++ b/edt/config.json
@@ -323,3 +323,4 @@ Temporary commit content 3682
 Temporary commit content 3686
 Temporary commit content 3706
 Temporary commit content 3708
+Temporary commit content 3712
