Refactored code for better readability

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -390,3 +390,4 @@ Temporary commit content 4388
 Temporary commit content 4411
 Temporary commit content 4430
 Temporary commit content 4433
+Temporary commit content 4445
