Improved error handling logic

--- a/edt/config.json
+++ b/edt/config.json
@@ -317,3 +317,4 @@ Temporary commit content 3597
 Temporary commit content 3625
 Temporary commit content 3636
 Temporary commit content 3647
+Temporary commit content 3661
