Updated project documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -327,3 +327,4 @@ Temporary commit content 3712
 Temporary commit content 3717
 Temporary commit content 3733
 Temporary commit content 3740
+Temporary commit content 3745
