Enhanced UI responsiveness

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -170,3 +170,4 @@ Temporary commit content 2091
 Temporary commit content 2097
 Temporary commit content 2104
 Temporary commit content 2120
+Temporary commit content 2137
