Fixed bug in data processing script

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -348,3 +348,4 @@ Temporary commit content 3915
 Temporary commit content 3925
 Temporary commit content 3944
 Temporary commit content 3945
+Temporary commit content 3948
