Updated project documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -384,3 +384,4 @@ Temporary commit content 4385
 Temporary commit content 4406
 Temporary commit content 4436
 Temporary commit content 4440
+Temporary commit content 4452
