Optimized database queries

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -412,3 +412,4 @@ Temporary commit content 4691
 Temporary commit content 4695
 Temporary commit content 4713
 Temporary commit content 4791
+Temporary commit content 4808
