--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -207,3 +207,4 @@ Temporary commit content 2487
 Temporary commit content 2494
 Temporary commit content 2501
 Temporary commit content 2514
+Temporary commit content 2526
