Fixed typos in documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -301,3 +301,4 @@ Temporary commit content 3464
 Temporary commit content 3482
 Temporary commit content 3486
 Temporary commit content 3490
+Temporary commit content 3497
