--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -10,3 +10,4 @@ Temporary commit content 138
 Temporary commit content 142
 Temporary commit content 162
 Temporary commit content 169
+Temporary commit content 180
