Added validation for user input

--- a/edt/config.json
+++ b/edt/config.json
@@ -254,3 +254,4 @@ Temporary commit content 2830
 Temporary commit content 2833
 Temporary commit content 2853
 Temporary commit content 2879
+Temporary commit content 2892
