Optimized database queries

--- a/edt/config.json
+++ b/edt/config.json
@@ -79,3 +79,4 @@ Temporary commit content 928
 Temporary commit content 931
 Temporary commit content 933
 Temporary commit content 942
+Temporary commit content 946
