Added validation for user input

--- a/edt/config.json
+++ b/edt/config.json
@@ -237,3 +237,4 @@ Temporary commit content 2627
 Temporary commit content 2628
 Temporary commit content 2635
 Temporary commit content 2646
+Temporary commit content 2660
