Refactored code for better readability

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -24,3 +24,4 @@ Temporary commit content 305
 Temporary commit content 306
 Temporary commit content 316
 Temporary commit content 347
+Temporary commit content 353
