--- a/edt/config.json
+++ b/edt/config.json
@@ -379,3 +379,4 @@ Temporary commit content 4338
 Temporary commit content 4348
 Temporary commit content 4354
 Temporary commit content 4367
+Temporary commit content 4369
