Improved error handling logic

--- a/edt/config.json
+++ b/edt/config.json
@@ -416,3 +416,4 @@ Temporary commit content 4742
 Temporary commit content 4751
 Temporary commit content 4752
 Temporary commit content 4768
+Temporary commit content 4771
