--- a/edt/config.json
+++ b/edt/config.json
@@ -130,3 +130,4 @@ Temporary commit content 1518
 Temporary commit content 1532
 Temporary commit content 1534
 Temporary commit content 1541
+Temporary commit content 1542
