Updated README with new features

--- a/edt/config.json
+++ b/edt/config.json
@@ -332,3 +332,4 @@ Temporary commit content 3749
 Temporary commit content 3750
 Temporary commit content 3756
 Temporary commit content 3805
+Temporary commit content 3816
