Fixed typos in documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -324,3 +324,4 @@ Temporary commit content 3686
 Temporary commit content 3706
 Temporary commit content 3708
 Temporary commit content 3712
+Temporary commit content 3717
