Enhanced UI responsiveness

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -262,3 +262,4 @@ Temporary commit content 3075
 Temporary commit content 3082
 Temporary commit content 3096
 Temporary commit content 3103
+Temporary commit content 3105
