Enhanced UI responsiveness

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -149,3 +149,4 @@ Temporary commit content 1807
 Temporary commit content 1822
 Temporary commit content 1827
 Temporary commit content 1834
+Temporary commit content 1855
