Optimized database queries

--- a/edt/config.json
+++ b/edt/config.json
@@ -126,3 +126,4 @@ Temporary commit content 1462
 Temporary commit content 1472
 Temporary commit content 1505
 Temporary commit content 1510
+Temporary commit content 1518
