Fixed bug in data processing script

--- a/edt/config.json
+++ b/edt/config.json
@@ -174,3 +174,4 @@ Temporary commit content 1966
 Temporary commit content 1974
 Temporary commit content 1984
 Temporary commit content 1985
+Temporary commit content 1991
