Updated project documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -278,3 +278,4 @@ Temporary commit content 3194
 Temporary commit content 3196
 Temporary commit content 3232
 Temporary commit content 3233
+Temporary commit content 3253
