--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -189,3 +189,4 @@ Temporary commit content 2301
 Temporary commit content 2315
 Temporary commit content 2318
 Temporary commit content 2331
+Temporary commit content 2345
