Updated README with new features

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -14,3 +14,4 @@ Temporary commit content 180
 Temporary commit content 242
 Temporary commit content 253
 Temporary commit content 280
+Temporary commit content 289
