Improved error handling logic

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -200,3 +200,4 @@ Temporary commit content 2419
 Temporary commit content 2422
 Temporary commit content 2436
 Temporary commit content 2437
+Temporary commit content 2461
