--- a/edt/config.json
+++ b/edt/config.json
@@ -183,3 +183,4 @@ Temporary commit content 2013
 Temporary commit content 2038
 Temporary commit content 2045
 Temporary commit content 2055
+Temporary commit content 2066
