Added validation for user input

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -426,3 +426,4 @@ Temporary commit content 4887
 Temporary commit content 4888
 Temporary commit content 4901
 Temporary commit content 4906
+Temporary commit content 4935
