Added initial project plan

--- a/edt/config.json
+++ b/edt/config.json
@@ -123,3 +123,4 @@ Temporary commit content 1441
 Temporary commit content 1443
 Temporary commit content 1447
 Temporary commit content 1462
+Temporary commit content 1472
