Updated project documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -144,3 +144,4 @@ Temporary commit content 1615
 Temporary commit content 1624
 Temporary commit content 1640
 Temporary commit content 1643
+Temporary commit content 1644
