Fixed bug in data processing script

--- a/edt/config.json
+++ b/edt/config.json
@@ -350,3 +350,4 @@ Temporary commit content 3997
 Temporary commit content 4000
 Temporary commit content 4007
 Temporary commit content 4026
+Temporary commit content 4031
