Updated README with new features

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -139,3 +139,4 @@ Temporary commit content 1701
 Temporary commit content 1706
 Temporary commit content 1708
 Temporary commit content 1717
+Temporary commit content 1723
