Optimized database queries

--- a/edt/config.json
+++ b/edt/config.json
@@ -374,3 +374,4 @@ Temporary commit content 4281
 Temporary commit content 4292
 Temporary commit content 4297
 Temporary commit content 4301
+Temporary commit content 4305
