Updated README with new features

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -263,3 +263,4 @@ Temporary commit content 3082
 Temporary commit content 3096
 Temporary commit content 3103
 Temporary commit content 3105
+Temporary commit content 3110
