Updated README with new features

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -250,3 +250,4 @@ Temporary commit content 2979
 Temporary commit content 2981
 Temporary commit content 2989
 Temporary commit content 2998
+Temporary commit content 3007
