Optimized database queries

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -433,3 +433,4 @@ Temporary commit content 4944
 Temporary commit content 4958
 Temporary commit content 4964
 Temporary commit content 4971
+Temporary commit content 4976
