Fixed typos in documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -225,3 +225,4 @@ Temporary commit content 2682
 Temporary commit content 2692
 Temporary commit content 2696
 Temporary commit content 2710
+Temporary commit content 2717
