Improved error handling logic

--- a/edt/config.json
+++ b/edt/config.json
@@ -393,3 +393,4 @@ Temporary commit content 4497
 Temporary commit content 4515
 Temporary commit content 4538
 Temporary commit content 4545
+Temporary commit content 4578
