Updated project documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -153,3 +153,4 @@ Temporary commit content 1685
 Temporary commit content 1690
 Temporary commit content 1703
 Temporary commit content 1727
+Temporary commit content 1729
