--- a/edt/config.json
+++ b/edt/config.json
@@ -57,3 +57,4 @@ Temporary commit content 606
 Temporary commit content 663
 Temporary commit content 664
 Temporary commit content 699
+Temporary commit content 708
