Updated README with new features

--- a/edt/config.json
+++ b/edt/config.json
@@ -94,3 +94,4 @@ Temporary commit content 1074
 Temporary commit content 1082
 Temporary commit content 1098
 Temporary commit content 1101
+Temporary commit content 1113
