Fixed bug in data processing script

--- a/edt/config.json
+++ b/edt/config.json
@@ -33,3 +33,4 @@ Temporary commit content 397
 Temporary commit content 422
 Temporary commit content 425
 Temporary commit content 427
+Temporary commit content 429
