Enhanced UI responsiveness

--- a/edt/config.json
+++ b/edt/config.json
@@ -423,3 +423,4 @@ Temporary commit content 4779
 Temporary commit content 4780
 Temporary commit content 4816
 Temporary commit content 4827
+Temporary commit content 4838
