Optimized database queries

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -273,3 +273,4 @@ Temporary commit content 3153
 Temporary commit content 3178
 Temporary commit content 3180
 Temporary commit content 3185
+Temporary commit content 3215
