--- a/edt/config.json
+++ b/edt/config.json
@@ -40,3 +40,4 @@ Temporary commit content 450
 Temporary commit content 483
 Temporary commit content 489
 Temporary commit content 498
+Temporary commit content 512
