Updated README with new features

--- a/edt/config.json
+++ b/edt/config.json
@@ -119,3 +119,4 @@ Temporary commit content 1322
 Temporary commit content 1334
 Temporary commit content 1358
 Temporary commit content 1419
+Temporary commit content 1441
