Optimized database queries

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -391,3 +391,4 @@ Temporary commit content 4411
 Temporary commit content 4430
 Temporary commit content 4433
 Temporary commit content 4445
+Temporary commit content 4455
