Added validation for user input

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -422,3 +422,4 @@ Temporary commit content 4849
 Temporary commit content 4859
 Temporary commit content 4862
 Temporary commit content 4877
+Temporary commit content 4887
