Updated project documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -373,3 +373,4 @@ Temporary commit content 4221
 Temporary commit content 4232
 Temporary commit content 4246
 Temporary commit content 4248
+Temporary commit content 4260
