Enhanced UI responsiveness

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -193,3 +193,4 @@ Temporary commit content 2345
 Temporary commit content 2364
 Temporary commit content 2368
 Temporary commit content 2388
+Temporary commit content 2400
