Refactored code for better readability

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -429,3 +429,4 @@ Temporary commit content 4906
 Temporary commit content 4935
 Temporary commit content 4937
 Temporary commit content 4941
+Temporary commit content 4944
