Fixed typos in documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -344,3 +344,4 @@ Temporary commit content 3949
 Temporary commit content 3955
 Temporary commit content 3960
 Temporary commit content 3966
+Temporary commit content 3973
