Updated README with new features

--- a/edt/config.json
+++ b/edt/config.json
@@ -198,3 +198,4 @@ Temporary commit content 2174
 Temporary commit content 2180
 Temporary commit content 2187
 Temporary commit content 2191
+Temporary commit content 2231
