Improved error handling logic

--- a/edt/config.json
+++ b/edt/config.json
@@ -316,3 +316,4 @@ Temporary commit content 3589
 Temporary commit content 3597
 Temporary commit content 3625
 Temporary commit content 3636
+Temporary commit content 3647
