--- a/edt/config.json
+++ b/edt/config.json
@@ -60,3 +60,4 @@ Temporary commit content 699
 Temporary commit content 708
 Temporary commit content 718
 Temporary commit content 719
+Temporary commit content 727
