Updated README with new features

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -72,3 +72,4 @@ Temporary commit content 880
 Temporary commit content 884
 Temporary commit content 887
 Temporary commit content 898
+Temporary commit content 902
