--- a/edt/config.json
+++ b/edt/config.json
@@ -64,3 +64,4 @@ Temporary commit content 727
 Temporary commit content 737
 Temporary commit content 746
 Temporary commit content 762
+Temporary commit content 765
