Added initial project plan

--- a/edt/config.json
+++ b/edt/config.json
@@ -193,3 +193,4 @@ Temporary commit content 2153
 Temporary commit content 2156
 Temporary commit content 2157
 Temporary commit content 2166
+Temporary commit content 2168
