Optimized database queries

--- a/edt/config.json
+++ b/edt/config.json
@@ -151,3 +151,4 @@ Temporary commit content 1664
 Temporary commit content 1681
 Temporary commit content 1685
 Temporary commit content 1690
+Temporary commit content 1703
