Fixed typos in documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -121,3 +121,4 @@ Temporary commit content 1358
 Temporary commit content 1419
 Temporary commit content 1441
 Temporary commit content 1443
+Temporary commit content 1447
