--- a/edt/config.json
+++ b/edt/config.json
@@ -255,3 +255,4 @@ Temporary commit content 2833
 Temporary commit content 2853
 Temporary commit content 2879
 Temporary commit content 2892
+Temporary commit content 2896
