--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -151,3 +151,4 @@ Temporary commit content 1827
 Temporary commit content 1834
 Temporary commit content 1855
 Temporary commit content 1911
+Temporary commit content 1918
