Optimized database queries

--- a/edt/config.json
+++ b/edt/config.json
@@ -167,3 +167,4 @@ Temporary commit content 1864
 Temporary commit content 1907
 Temporary commit content 1908
 Temporary commit content 1916
+Temporary commit content 1920
