Fixed typos in documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -434,3 +434,4 @@ Temporary commit content 4958
 Temporary commit content 4964
 Temporary commit content 4971
 Temporary commit content 4976
+Temporary commit content 4978
