Fixed typos in documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -185,3 +185,4 @@ Temporary commit content 2276
 Temporary commit content 2277
 Temporary commit content 2278
 Temporary commit content 2280
+Temporary commit content 2301
