Added initial project plan

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -104,3 +104,4 @@ Temporary commit content 1213
 Temporary commit content 1216
 Temporary commit content 1219
 Temporary commit content 1220
+Temporary commit content 1232
