--- a/edt/config.json
+++ b/edt/config.json
@@ -181,3 +181,4 @@ Temporary commit content 2002
 Temporary commit content 2011
 Temporary commit content 2013
 Temporary commit content 2038
+Temporary commit content 2045
