Added validation for user input

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -140,3 +140,4 @@ Temporary commit content 1706
 Temporary commit content 1708
 Temporary commit content 1717
 Temporary commit content 1723
+Temporary commit content 1741
