Optimized database queries

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -91,3 +91,4 @@ Temporary commit content 1096
 Temporary commit content 1124
 Temporary commit content 1126
 Temporary commit content 1134
+Temporary commit content 1144
