Updated README with new features

--- a/edt/config.json
+++ b/edt/config.json
@@ -260,3 +260,4 @@ Temporary commit content 2897
 Temporary commit content 2945
 Temporary commit content 2975
 Temporary commit content 2984
+Temporary commit content 2999
