Added initial project plan

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -168,3 +168,4 @@ Temporary commit content 2083
 Temporary commit content 2086
 Temporary commit content 2091
 Temporary commit content 2097
+Temporary commit content 2104
