Refactored code for better readability

--- a/edt/config.json
+++ b/edt/config.json
@@ -425,3 +425,4 @@ Temporary commit content 4816
 Temporary commit content 4827
 Temporary commit content 4838
 Temporary commit content 4854
+Temporary commit content 4902
