Added initial project plan

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -159,3 +159,4 @@ Temporary commit content 1987
 Temporary commit content 1988
 Temporary commit content 1997
 Temporary commit content 2010
+Temporary commit content 2012
