--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -11,3 +11,4 @@ Temporary commit content 142
 Temporary commit content 162
 Temporary commit content 169
 Temporary commit content 180
+Temporary commit content 242
