Improved error handling logic

--- a/edt/config.json
+++ b/edt/config.json
@@ -233,3 +233,4 @@ Temporary commit content 2616
 Temporary commit content 2621
 Temporary commit content 2623
 Temporary commit content 2626
+Temporary commit content 2627
