Updated README with new features

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -323,3 +323,4 @@ Temporary commit content 3688
 Temporary commit content 3719
 Temporary commit content 3729
 Temporary commit content 3731
+Temporary commit content 3748
