Fixed bug in data processing script

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -283,3 +283,4 @@ Temporary commit content 3263
 Temporary commit content 3273
 Temporary commit content 3274
 Temporary commit content 3279
+Temporary commit content 3281
