Refactored code for better readability

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -282,3 +282,4 @@ Temporary commit content 3259
 Temporary commit content 3263
 Temporary commit content 3273
 Temporary commit content 3274
+Temporary commit content 3279
