Improved error handling logic

--- a/edt/config.json
+++ b/edt/config.json
@@ -65,3 +65,4 @@ Temporary commit content 737
 Temporary commit content 746
 Temporary commit content 762
 Temporary commit content 765
+Temporary commit content 779
