Added validation for user input

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -420,3 +420,4 @@ Temporary commit content 4833
 Temporary commit content 4836
 Temporary commit content 4849
 Temporary commit content 4859
+Temporary commit content 4862
