Enhanced UI responsiveness

--- a/edt/config.json
+++ b/edt/config.json
@@ -49,3 +49,4 @@ Temporary commit content 575
 Temporary commit content 579
 Temporary commit content 587
 Temporary commit content 592
+Temporary commit content 594
