Enhanced UI responsiveness

--- a/edt/config.json
+++ b/edt/config.json
@@ -331,3 +331,4 @@ Temporary commit content 3745
 Temporary commit content 3749
 Temporary commit content 3750
 Temporary commit content 3756
+Temporary commit content 3805
