Updated README with new features

--- a/edt/config.json
+++ b/edt/config.json
@@ -282,3 +282,4 @@ Temporary commit content 3253
 Temporary commit content 3291
 Temporary commit content 3305
 Temporary commit content 3319
+Temporary commit content 3344
