Improved error handling logic

--- a/edt/config.json
+++ b/edt/config.json
@@ -85,3 +85,4 @@ Temporary commit content 970
 Temporary commit content 986
 Temporary commit content 1015
 Temporary commit content 1029
+Temporary commit content 1046
