Optimized database queries

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -218,3 +218,4 @@ Temporary commit content 2592
 Temporary commit content 2603
 Temporary commit content 2611
 Temporary commit content 2618
+Temporary commit content 2653
