Updated README with new features

--- a/edt/config.json
+++ b/edt/config.json
@@ -24,3 +24,4 @@ Temporary commit content 276
 Temporary commit content 295
 Temporary commit content 341
 Temporary commit content 345
+Temporary commit content 349
