Added validation for user input

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -87,3 +87,4 @@ Temporary commit content 1051
 Temporary commit content 1063
 Temporary commit content 1071
 Temporary commit content 1093
+Temporary commit content 1096
