Fixed typos in documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -90,3 +90,4 @@ Temporary commit content 1093
 Temporary commit content 1096
 Temporary commit content 1124
 Temporary commit content 1126
+Temporary commit content 1134
