Enhanced UI responsiveness

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -38,3 +38,4 @@ Temporary commit content 468
 Temporary commit content 485
 Temporary commit content 509
 Temporary commit content 517
+Temporary commit content 555
