--- a/edt/config.json
+++ b/edt/config.json
@@ -227,3 +227,4 @@ Temporary commit content 2572
 Temporary commit content 2573
 Temporary commit content 2590
 Temporary commit content 2593
+Temporary commit content 2594
