Optimized database queries

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -342,3 +342,4 @@ Temporary commit content 3882
 Temporary commit content 3888
 Temporary commit content 3890
 Temporary commit content 3895
+Temporary commit content 3908
