Fixed bug in data processing script

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -144,3 +144,4 @@ Temporary commit content 1741
 Temporary commit content 1744
 Temporary commit content 1759
 Temporary commit content 1791
+Temporary commit content 1804
