Added validation for user input

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -40,3 +40,4 @@ Temporary commit content 509
 Temporary commit content 517
 Temporary commit content 555
 Temporary commit content 568
+Temporary commit content 583
