Improved error handling logic

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -35,3 +35,4 @@ Temporary commit content 435
 Temporary commit content 438
 Temporary commit content 456
 Temporary commit content 468
+Temporary commit content 485
