Added initial project plan

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -284,3 +284,4 @@ Temporary commit content 3273
 Temporary commit content 3274
 Temporary commit content 3279
 Temporary commit content 3281
+Temporary commit content 3283
