Fixed typos in documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -143,3 +143,4 @@ Temporary commit content 1723
 Temporary commit content 1741
 Temporary commit content 1744
 Temporary commit content 1759
+Temporary commit content 1791
