Enhanced UI responsiveness

--- a/edt/config.json
+++ b/edt/config.json
@@ -429,3 +429,4 @@ Temporary commit content 4902
 Temporary commit content 4908
 Temporary commit content 4919
 Temporary commit content 4931
+Temporary commit content 4939
