Updated project documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -353,3 +353,4 @@ Temporary commit content 3990
 Temporary commit content 3993
 Temporary commit content 4016
 Temporary commit content 4025
+Temporary commit content 4046
