Refactored code for better readability

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -113,3 +113,4 @@ Temporary commit content 1292
 Temporary commit content 1306
 Temporary commit content 1314
 Temporary commit content 1350
+Temporary commit content 1395
