Optimized database queries

--- a/edt/config.json
+++ b/edt/config.json
@@ -185,3 +185,4 @@ Temporary commit content 2045
 Temporary commit content 2055
 Temporary commit content 2066
 Temporary commit content 2076
+Temporary commit content 2110
