Updated project documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -415,3 +415,4 @@ Temporary commit content 4730
 Temporary commit content 4742
 Temporary commit content 4751
 Temporary commit content 4752
+Temporary commit content 4768
