Updated README with new features

--- a/edt/config.json
+++ b/edt/config.json
@@ -162,3 +162,4 @@ Temporary commit content 1797
 Temporary commit content 1803
 Temporary commit content 1805
 Temporary commit content 1825
+Temporary commit content 1863
