Enhanced UI responsiveness

--- a/edt/config.json
+++ b/edt/config.json
@@ -294,3 +294,4 @@ Temporary commit content 3427
 Temporary commit content 3439
 Temporary commit content 3447
 Temporary commit content 3448
+Temporary commit content 3450
