Fixed typos in documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -358,3 +358,4 @@ Temporary commit content 4054
 Temporary commit content 4062
 Temporary commit content 4078
 Temporary commit content 4092
+Temporary commit content 4093
