Added initial project plan

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -156,3 +156,4 @@ Temporary commit content 1930
 Temporary commit content 1945
 Temporary commit content 1947
 Temporary commit content 1987
+Temporary commit content 1988
