Refactored code for better readability

--- a/edt/config.json
+++ b/edt/config.json
@@ -335,3 +335,4 @@ Temporary commit content 3805
 Temporary commit content 3816
 Temporary commit content 3832
 Temporary commit content 3852
+Temporary commit content 3858
