--- a/edt/config.json
+++ b/edt/config.json
@@ -417,3 +417,4 @@ Temporary commit content 4751
 Temporary commit content 4752
 Temporary commit content 4768
 Temporary commit content 4771
+Temporary commit content 4772
