Enhanced UI responsiveness

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -161,3 +161,4 @@ Temporary commit content 1997
 Temporary commit content 2010
 Temporary commit content 2012
 Temporary commit content 2032
+Temporary commit content 2034
