--- a/edt/config.json
+++ b/edt/config.json
@@ -349,3 +349,4 @@ Temporary commit content 3987
 Temporary commit content 3997
 Temporary commit content 4000
 Temporary commit content 4007
+Temporary commit content 4026
