Improved error handling logic

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -220,3 +220,4 @@ Temporary commit content 2611
 Temporary commit content 2618
 Temporary commit content 2653
 Temporary commit content 2666
+Temporary commit content 2680
