--- a/edt/config.json
+++ b/edt/config.json
@@ -270,3 +270,4 @@ Temporary commit content 3030
 Temporary commit content 3048
 Temporary commit content 3053
 Temporary commit content 3054
+Temporary commit content 3067
