Fixed bug in data processing script

--- a/edt/config.json
+++ b/edt/config.json
@@ -387,3 +387,4 @@ Temporary commit content 4440
 Temporary commit content 4452
 Temporary commit content 4459
 Temporary commit content 4461
+Temporary commit content 4468
