Fixed typos in documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -208,3 +208,4 @@ Temporary commit content 2494
 Temporary commit content 2501
 Temporary commit content 2514
 Temporary commit content 2526
+Temporary commit content 2538
