Optimized database queries

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -106,3 +106,4 @@ Temporary commit content 1219
 Temporary commit content 1220
 Temporary commit content 1232
 Temporary commit content 1239
+Temporary commit content 1252
