Refactored code for better readability

--- a/edt/config.json
+++ b/edt/config.json
@@ -74,3 +74,4 @@ Temporary commit content 850
 Temporary commit content 877
 Temporary commit content 879
 Temporary commit content 891
+Temporary commit content 897
