Optimized database queries

--- a/edt/config.json
+++ b/edt/config.json
@@ -276,3 +276,4 @@ Temporary commit content 3087
 Temporary commit content 3108
 Temporary commit content 3194
 Temporary commit content 3196
+Temporary commit content 3232
