Updated README with new features

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -234,3 +234,4 @@ Temporary commit content 2810
 Temporary commit content 2814
 Temporary commit content 2817
 Temporary commit content 2821
+Temporary commit content 2850
