Updated project documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -341,3 +341,4 @@ Temporary commit content 3876
 Temporary commit content 3882
 Temporary commit content 3888
 Temporary commit content 3890
+Temporary commit content 3895
