Added validation for user input

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -138,3 +138,4 @@ Temporary commit content 1700
 Temporary commit content 1701
 Temporary commit content 1706
 Temporary commit content 1708
+Temporary commit content 1717
