Updated project documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -431,3 +431,4 @@ Temporary commit content 4937
 Temporary commit content 4941
 Temporary commit content 4944
 Temporary commit content 4958
+Temporary commit content 4964
