Fixed typos in documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -122,3 +122,4 @@ Temporary commit content 1419
 Temporary commit content 1441
 Temporary commit content 1443
 Temporary commit content 1447
+Temporary commit content 1462
