Updated README with new features

--- a/edt/config.json
+++ b/edt/config.json
@@ -351,3 +351,4 @@ Temporary commit content 4000
 Temporary commit content 4007
 Temporary commit content 4026
 Temporary commit content 4031
+Temporary commit content 4035
