Added validation for user input

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -163,3 +163,4 @@ Temporary commit content 2012
 Temporary commit content 2032
 Temporary commit content 2034
 Temporary commit content 2053
+Temporary commit content 2068
