--- a/edt/config.json
+++ b/edt/config.json
@@ -23,3 +23,4 @@ Temporary commit content 271
 Temporary commit content 276
 Temporary commit content 295
 Temporary commit content 341
+Temporary commit content 345
