Fixed typos in documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -86,3 +86,4 @@ Temporary commit content 1009
 Temporary commit content 1051
 Temporary commit content 1063
 Temporary commit content 1071
+Temporary commit content 1093
