--- a/edt/config.json
+++ b/edt/config.json
@@ -71,3 +71,4 @@ Temporary commit content 824
 Temporary commit content 831
 Temporary commit content 843
 Temporary commit content 850
+Temporary commit content 877
