Added initial project plan

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -94,3 +94,4 @@ Temporary commit content 1134
 Temporary commit content 1144
 Temporary commit content 1155
 Temporary commit content 1164
+Temporary commit content 1165
