Fixed bug in data processing script

--- a/edt/config.json
+++ b/edt/config.json
@@ -69,3 +69,4 @@ Temporary commit content 779
 Temporary commit content 796
 Temporary commit content 824
 Temporary commit content 831
+Temporary commit content 843
