Improved error handling logic

--- a/edt/config.json
+++ b/edt/config.json
@@ -334,3 +334,4 @@ Temporary commit content 3756
 Temporary commit content 3805
 Temporary commit content 3816
 Temporary commit content 3832
+Temporary commit content 3852
