Improved error handling logic

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -103,3 +103,4 @@ Temporary commit content 1212
 Temporary commit content 1213
 Temporary commit content 1216
 Temporary commit content 1219
+Temporary commit content 1220
