Added initial project plan

--- a/edt/config.json
+++ b/edt/config.json
@@ -50,3 +50,4 @@ Temporary commit content 579
 Temporary commit content 587
 Temporary commit content 592
 Temporary commit content 594
+Temporary commit content 598
