Added validation for user input

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -209,3 +209,4 @@ Temporary commit content 2501
 Temporary commit content 2514
 Temporary commit content 2526
 Temporary commit content 2538
+Temporary commit content 2541
