--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -425,3 +425,4 @@ Temporary commit content 4877
 Temporary commit content 4887
 Temporary commit content 4888
 Temporary commit content 4901
+Temporary commit content 4906
