--- a/edt/config.json
+++ b/edt/config.json
@@ -312,3 +312,4 @@ Temporary commit content 3558
 Temporary commit content 3568
 Temporary commit content 3575
 Temporary commit content 3586
+Temporary commit content 3589
