Refactored code for better readability

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -203,3 +203,4 @@ Temporary commit content 2437
 Temporary commit content 2461
 Temporary commit content 2466
 Temporary commit content 2479
+Temporary commit content 2487
