--- a/edt/config.json
+++ b/edt/config.json
@@ -91,3 +91,4 @@ Temporary commit content 1054
 Temporary commit content 1065
 Temporary commit content 1073
 Temporary commit content 1074
+Temporary commit content 1082
