Optimized database queries

--- a/edt/config.json
+++ b/edt/config.json
@@ -55,3 +55,4 @@ Temporary commit content 601
 Temporary commit content 603
 Temporary commit content 606
 Temporary commit content 663
+Temporary commit content 664
