Enhanced UI responsiveness

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -338,3 +338,4 @@ Temporary commit content 3844
 Temporary commit content 3863
 Temporary commit content 3870
 Temporary commit content 3876
+Temporary commit content 3882
