Optimized database queries

--- a/edt/config.json
+++ b/edt/config.json
@@ -25,3 +25,4 @@ Temporary commit content 295
 Temporary commit content 341
 Temporary commit content 345
 Temporary commit content 349
+Temporary commit content 358
