Improved error handling logic

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -80,3 +80,4 @@ Temporary commit content 941
 Temporary commit content 944
 Temporary commit content 945
 Temporary commit content 949
+Temporary commit content 961
