--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -78,3 +78,4 @@ Temporary commit content 914
 Temporary commit content 927
 Temporary commit content 941
 Temporary commit content 944
+Temporary commit content 945
