Added validation for user input

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -307,3 +307,4 @@ Temporary commit content 3465
 Temporary commit content 3474
 Temporary commit content 3499
 Temporary commit content 3538
+Temporary commit content 3550
