Optimized database queries

--- a/edt/config.json
+++ b/edt/config.json
@@ -229,3 +229,4 @@ Temporary commit content 2590
 Temporary commit content 2593
 Temporary commit content 2594
 Temporary commit content 2615
+Temporary commit content 2616
