Updated README with new features

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -254,3 +254,4 @@ Temporary commit content 3007
 Temporary commit content 3010
 Temporary commit content 3016
 Temporary commit content 3022
+Temporary commit content 3031
