--- a/edt/config.json
+++ b/edt/config.json
@@ -199,3 +199,4 @@ Temporary commit content 2180
 Temporary commit content 2187
 Temporary commit content 2191
 Temporary commit content 2231
+Temporary commit content 2252
